// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <div
    class="sc-AxmLO eAHgVm"
  >
    <button
      class="sc-AxgMl fvnHkD"
      size="2"
      type="button"
    />
    <ul
      class="sc-fzozJi dryWRL"
      data-testid="dropdown"
    />
  </div>
</div>
`;

exports[`renders dropdown 1`] = `
<div>
  <div
    class="sc-AxmLO ichFZJ"
  >
    <button
      class="sc-AxgMl fvnHkD"
      size="2"
      type="button"
    >
      <p
        class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
      >
        Example
      </p>
    </button>
    <ul
      class="sc-fzozJi fTRFFP"
      data-testid="dropdown"
    >
      <a
        class="sc-AxhUy kKWhET"
        href="http://www.google.pl"
        size="2"
        target="_blank"
      >
        <div
          class="sc-AxirZ btYaIv sc-AxheI kuvChn"
          data-testid="icon-Upload"
        >
          <test-file-stub
            image="test-file-stub"
          />
        </div>
        <p
          class="sc-AxjAm pMKRu sc-Axmtr fhTfIi"
        >
          I open Google in new tab
        </p>
      </a>
    </ul>
  </div>
</div>
`;
